<resources>
    <string name="app_name">GoodNight</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title_email">Email</string>
    <string name="login_title_password">Password</string>
    <string name="login_btn_signIn">Sign in</string>
    <string name="login_btn_register">Register</string>
    <string name="register_title_email">Email</string>
    <string name="register_title_password">Password</string>
    <string name="register_title_gender">Gender</string>
    <string name="register_title_ageRange">Age Range</string>
    <string name="register_btn_register">Register</string>

</resources>
